# utf8-streams-ocaml

./: README.md  dune-project  utf8_stream.opam  utf8_streams_ocaml.opam
lib/: dune  utf8_stream.ml  utf8_stream.mli  utf8_streams.ml
test/: dune  utf8_stream.ml  utf8_streams.ml  utf8_streams_ocaml.ml
